--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.5.0",
     "lodash": "^4.17.15",
     "matrix-rotate": "0.0.2",
     "react": "^16.11.0",
